[gd_scene load_steps=10 format=2]

[ext_resource path="res://BlasterGuy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://StartPosition.gd" type="Script" id=3]
[ext_resource path="res://EnemySpawnPosition.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/Daniel Birch - The Shape Of Nothing.mp3" type="AudioStream" id=6]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=7]
[ext_resource path="res://art/upgrade.wav" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 954, 1013 )
script = ExtResource( 3 )

[node name="BlasterGuy" parent="." instance=ExtResource( 1 )]

[node name="EnemySpawnPosition" type="Position2D" parent="."]
script = ExtResource( 4 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="EnemySpawnPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemySpawnPath"]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="ThemeMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="DifficultyUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="player_spawned_with_size" from="." to="StartPosition" method="_on_Main_player_spawned_with_size"]
[connection signal="player_spawned_with_size" from="." to="EnemySpawnPosition" method="_on_Main_player_spawned_with_size"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
